--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
 
-  <header><h1>Deal car</h1></header> 
+  <header>
 
   <img src ="https://image.shutterstock.com/z/stock-vector-vector-logo-design-of-car-dealer-technology-business-deal-marketing-and-auto-shop-service-and-1027827613.jpg" 
         alt="our logo" style="height:150px; width:150px"/>
-
+  </header>
   <nav>
       <ul>
           <li><a href="https://otator.github.io/car_website/index">Home</a></li>
