--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <hr/>
   <nav>
       <ul>
-          <li><img src="http://www.exploringmacedonia.com/content/top%20pic%20rent%20a%20car_1.jpg" alt="rent-car"/></li>
+          <li><img src="https://www.mercedes-benz.ca/content/dam/mb-nafta/ca/cpo/MBCAN_CPO_SO_AMG_450x300.jpg" alt="rent-car"/></li>
           <li><h4>rent car</h4></li>
           <li><img src="https://carsot.com/images/daihatsu-altis-iv-sxv50-2012-2014-sedan-interior.jpg" alt="rent-car"/></li>
           <li><h4>rent car</h4></li>
