--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
 </head>
 
 <body>
+<script>
+var username = prompt ('please enter your name');
 
+document.write ('<p>' + username + '</p>');
+
+var age = prompt ('please enter your age')
+if (age>=18){
+    alert ('WELCOM')
+}
+else{
+    alert('sorry not allowed')
+}
+
+
+
+
+
+</script>
   <header>
 
   <img src ="https://image.shutterstock.com/z/stock-vector-vector-logo-design-of-car-dealer-technology-business-deal-marketing-and-auto-shop-service-and-1027827613.jpg" 
